--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,5 +9,7 @@
   "confirm_password": "Confirm Password",
   "password": "Password",
   "surname": "Surname",
-  "name": "Name"
+  "name": "Name",
+  "have_account": "Already have an account?",
+  "login": "Login"
 }
