--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,5 +1,10 @@
 {
   "@@locale": "pl",
+  "@auth_social_text": {
+    "placeholders": {
+      "text": {}
+    }
+  },
   "empty_field": "Pole nie może być puste",
   "invalid_email": "Wpisz poprawny email",
   "invalid_password": "Hasło musi mieć co najmniej 6 znaków, w tym jedną cyfrę, jedną wielką literę i jedną małą literę",
@@ -23,9 +28,5 @@
   "password_not_the_same": "Hasła nie są takie same",
   "login_success": "Login Successful",
   "auth_social_text": "lub {text} przez",
-  "@auth_social_text": {
-    "placeholders": {
-      "text": {}
-    }
-  }
+  "logout": "Wyloguj się"
 }
