--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -32,15 +32,19 @@
   "meet_new_people": "poznaj nowych ludzi, kontakty i lub znajdź nowych przyjaciół",
   "meet_new_friend": "poznaj nowych przyjaciół lub znajdź partnera",
   "search": "Szukaj",
-  "trending": "Trending",
-  "latest": "Latest",
-  "discover": "Discover",
-  "daily_new": "Daily New",
-  "profile": "Profile",
-  "notification": "Notification",
-  "message": "Message",
-  "stream": "Stream",
-  "home": "Home",
-  "add_story": "Add Story",
-  "add_post": "Add Post"
+  "trending": "na czasie",
+  "latest": "najnowsze",
+  "discover": "Odkryj",
+  "daily_new": "nowe",
+  "profile": "Profil",
+  "notification": "Powiadomienia",
+  "message": "Wiadomości",
+  "stream": "Na żywo",
+  "home": "Strona główna",
+  "add_story": "Dodaj story",
+  "add_post": "Dodaj post",
+  "description": "Opis",
+  "title": "Tytuł",
+  "add_main_post": "Dodaj główny post",
+  "change_locale": "zmień język"
 }
