ar language added, language change logic, adding main post and story logic, ui changes

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -46,5 +46,7 @@
   "description": "وصف",
   "title": "عنوان",
   "add_main_post": "إضافة منشور رئيسي",
-  "change_locale": "تغيير اللغة"
+  "change_locale": "تغيير اللغة",
+  "gallery": "صالة عرض",
+  "camera": "آلة تصوير"
 }
