--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -44,5 +44,7 @@
   "description": "Description",
   "title": "Title",
   "add_main_post": "Add Main Post",
-  "change_locale": "Change Locale"
+  "change_locale": "Change Locale",
+  "gallery": "Gallery",
+  "camera": "Camera"
 }
