basic profile page ui and logout function, minor changes to the app logic,

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -45,8 +45,10 @@
   "add_post": "إضافة منشور",
   "description": "وصف",
   "title": "عنوان",
-  "add_main_post": "إضافة منشور رئيسي",
   "change_locale": "تغيير اللغة",
   "gallery": "صالة عرض",
-  "camera": "آلة تصوير"
+  "camera": "آلة تصوير",
+  "followers": "متابعون",
+  "likes": "إعجابات",
+  "posts": "المشاركات"
 }
