profile page user data added, register scaffold messenger added, minor fixes

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -50,5 +50,7 @@
   "camera": "آلة تصوير",
   "followers": "متابعون",
   "likes": "إعجابات",
-  "posts": "المشاركات"
+  "posts": "المشاركات",
+  "save": "حفظ",
+  "upper_case_letter": "حرف كبير"
 }
