changed state logic, added reset password page with business logic,

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -52,5 +52,6 @@
   "likes": "إعجابات",
   "posts": "المشاركات",
   "save": "حفظ",
-  "upper_case_letter": "حرف كبير"
+  "upper_case_letter": "حرف كبير",
+  "bio": "سيرة ذاتية"
 }
